[package]
name = "fugue-concolic"
version = "0.2.4"
edition = "2021"
description = "Concolic execution Engine for Fugue"
license = "MIT"
repository = "https://github.com/fugue-re/fugue-concolic"

[features]
loader-all = ["metaemu/loader-all"]
loader-ghidra = ["metaemu/loader-ghidra"]
loader-idapro = ["metaemu/loader-idapro"]
loader-radare = ["metaemu/loader-radare"]

[dependencies]
dyn-clone = "1"
either = "1"
fnv = "1"
fugue = { version = "0.2", registry = "fugue" , default-features = false }
metaemu = { version = "0.3", default-features = false }
fxhash = "0.2"
hashconsing = "1"
intervals = { version = "0.1", registry = "fugue" }
itertools = "0.10"
parking_lot = "0.11"
smallvec = "1"
thiserror = "1"
